# raytracer

./: .gitignore  CMakeLists.txt  README.md  Raytracer.sln  project1grade.doc
Project1/: CMyRaytraceRenderer.cpp  CMyRaytraceRenderer.h  ChildView.cpp  ChildView.h  Poisson.h  Project1.rc  Project1.vcxproj  Project1.vcxproj.filters  ShaderUtilities.h  pch.h  resource.h
Project1/graphics/: GrCubeTexture.h  GrPoint.h  GrTexture.h
Raytracer/: ChildView.cpp  Debugger.h  MainFrm.cpp  Poisson.h  Raytracer.cpp  Raytracer.h  Raytracer.rc  Raytracer.vcxproj  Raytracer.vcxproj.filters  resource.h
Raytracer/ShaderWnd/: ShaderWnd.cpp  ShaderWnd.h
Raytracer/graphics/: GrObject.cpp  GrObject.h  GrTexture.cpp  RayIntersection.h
Raytracer/res/: Raytracer.rc2
